--- a/build.gradle
+++ b/build.gradle
@@ -1,72 +1,62 @@
 plugins {
-	id 'fabric-loom' version '0.7-SNAPSHOT'
-	id 'maven-publish'
+	alias libs.plugins.fabric.loom
+	id "maven-publish"
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+version = "$mod_version+$target_version"
+group = maven_group
 
-archivesBaseName = project.archives_base_name
-version = project.mod_version
-group = project.maven_group
-
-minecraft {
+base {
+	archivesName = archives_name
 }
 
-dependencies {
-	//to change the versions see the gradle.properties file
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+repositories {
+	maven { url "https://jitpack.io" }
 }
 
-processResources {
-	inputs.property "version", project.version
-
-	filesMatching("fabric.mod.json") {
-		expand "version": project.version
+loom {
+	decompilers {
+		vineflower {
+			options.putAll(["mark-corresponding-synthetics": "1", "indent-string": "    "])
+		}
+	}
+	mixin {
+		useLegacyMixinAp = false
 	}
 }
 
-// ensure that the encoding is set to UTF-8, no matter what the system default is
-// this fixes some edge cases with special characters not displaying correctly
-// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-tasks.withType(JavaCompile) {
-	options.encoding = "UTF-8"
+dependencies {
+	minecraft libs.minecraft
+	mappings variantOf(libs.yarn.mappings) { classifier "v2" }
+	modImplementation libs.fabric.loader
+	vineflowerDecompilerClasspath libs.vineflower
+	modImplementation libs.speedrunapi
+	modImplementation libs.worldpreview
 }
 
-// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-// if it is present.
-// If you remove this task, sources will not be generated.
-task sourcesJar(type: Jar, dependsOn: classes) {
-	classifier = "sources"
-	from sourceSets.main.allSource
+processResources {
+	filesMatching "fabric.mod.json", {
+		expand "version": version
+	}
+}
+
+tasks.withType(JavaCompile).configureEach {
+	it.options.encoding = "UTF-8"
+	it.options.release.set(8)
+}
+
+java {
+	sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
+	withSourcesJar()
 }
 
 jar {
 	from "LICENSE"
 }
 
-// configure the maven publication
 publishing {
-	publications {
-		mavenJava(MavenPublication) {
-			// add all the jars that should be included when publishing to maven
-			artifact(jar) {
-				builtBy remapJar
-			}
-			artifact("${project.buildDir.absolutePath}/libs/${archivesBaseName}-${project.version}.jar"){
-				builtBy remapJar
-			}
-			artifact(sourcesJar) {
-				builtBy remapSourcesJar
-			}
-		}
+	publications.create("mavenJava", MavenPublication) {
+		from components.java
 	}
-
-	// select the repositories you want to publish to
-	repositories {
-		// uncomment to publish to the local maven
-		// mavenLocal()
-	}
+	repositories {}
 }
