--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,8 @@
-org.gradle.jvmargs  = -Xmx1G
+org.gradle.jvmargs = -Xmx2G
+org.gradle.parallel = true
+org.gradle.caching = true
 
-#Fabric properties
-minecraft_version   = 1.16.1
-yarn_mappings       = 1.16.1+build.21
-loader_version      = 0.11.3
-
-#Mod properties
-mod_version         = 1.0.4+MC1.16.1
-maven_group         = me.duncanruns.icarus
-archives_base_name  = icarus
+mod_version = 1.1.0
+target_version = 1.16.1
+archives_name = icarus
+maven_group = me.duncanruns.icarus
